# dropping-thread-local.rs

./: .gitignore  Cargo.toml  Justfile  README.md  lefthook.yml  performance.md
benches/: lookup.rs
src/: lib.rs  local_ids.rs  state.rs
src/state/: global.rs  ids.rs  local_defs.rs  thread.rs
tests/: from_thread_local.rs
